--- a/MyMailBox-6.0/Properties/launchSettings.json
+++ b/MyMailBox-6.0/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -10,12 +10,13 @@
   "profiles": {
     "MyMailBox_6._0": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7230;http://localhost:5230",
+      "launchUrl": "mailbox/index?reference=X425",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7230;http://localhost:5230",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
