--- a/MyMailBox-6.0/appsettings.json
+++ b/MyMailBox-6.0/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "MailBoxConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Mailboxes;Trusted_Connection=True;ConnectRetryCount=0",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
